[package]
name = "slite"
version = "0.1.0"
authors = ["Martin Ashby <martin@ashbysoft.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slack = "0.22.0"
config = "0.10.0"
rusqlite = "0.23.1"
gtk = "0.8.1"
gio = "0.8.1"
